# NixHomeServer

./: .gitignore  AGENTS.md  README.md  U.docx  configuration.nix  disko-install.nix  disko-system.nix  disko.nix  flake.nix  hardware-configuration.nix  result  rules.toml  statix.toml  system-resources.nix  vars.example.nix  vars.nix
bootstrap/: apply-disko.sh  disko-data.nix  disko-system.nix  init-site.sh  storage-plan.sh
custom_apps/mkvmaker/: .gitignore  Cargo.toml  README.md  disc-to-jellyfin  dvd-auto-backup  flake.nix
custom_apps/mkvmaker/src/: main.rs
custom_apps/rust/apps/kanidm-admin/: Cargo.toml  default.nix
custom_apps/rust/apps/kanidm-admin/src/: backend.rs  backend_log.rs  cli.rs  context.rs  kanidm_cli.rs  lib.rs  main.rs  output.rs  sensitivity.rs  session_state.rs  validation.rs  verification.rs
custom_apps/rust/apps/kanidm-admin/src/interactive/: controller.rs  forms.rs  menus.rs  mod.rs  pickers.rs  render.rs  reviews.rs
custom_apps/rust/apps/kanidm-admin/src/interactive/flows/: client.rs  local.rs  membership.rs  mod.rs  user.rs
custom_apps/rust/apps/kanidm-admin/src/inventory/: groups.rs  mod.rs  policy.rs
custom_apps/rust/apps/kanidm-admin/src/ops/: client.rs  context.rs  executor.rs  history.rs  local.rs  local_runtime.rs  membership.rs  mod.rs  policy.rs  session.rs  sftp.rs  user.rs
custom_apps/rust/apps/kanidm-admin/src/ops/local/: jellyfin.rs  mod.rs  vaultwarden.rs
custom_apps/rust/apps/kanidm-admin/src/ops/sftp/: checks.rs  mod.rs  output.rs  runtime.rs
custom_apps/rust/apps/kanidm-admin/tests/: cli.rs
custom_apps/rust/apps/kanidm-canary-bootstrap/: Cargo.toml  default.nix
custom_apps/rust/apps/kanidm-canary-bootstrap/src/: main.rs
documentation/: README.md  Things to fix up  bootstrap.md  custom-app-development.md  disko_instructions.txt  first-admin-session.md  first_bootstrap_checklist.md  install-from-scratch.md  kanidm.md  kanidm_cli.md  mail-archive.md  manual_steps.txt  networking-and-access.md  operations.md  power-management.md  project_tree.txt  quickstart.md  restore-and-recovery.md  runtime-validation-report-template.md  runtime-validation.md  secrets-and-prereqs.md  storage-monitoring.md  vaultwarden.md
flake/: apps.nix  checks.nix  dev-shells.nix  host.nix  module-removal-matrix.nix  packages.nix  system.nix
hardware/: generic-uefi.nix
lib/: authorization-groups.nix  backup-access.nix  file-access-gids.nix  identity-access.nix  identity-validation.nix  name-validation.nix  network-validation.nix  offline-media.nix  rclone-validation.nix  settled-watcher.nix  storage-validation.nix
rust/apps/kanidm-admin/: Cargo.toml  default.nix
rust/apps/kanidm-admin/src/: backend.rs  config.rs  context.rs  groups.rs  kanidm_cli.rs  lib.rs  main.rs  models.rs  output.rs  session_state.rs  validation.rs  verification.rs
rust/apps/kanidm-admin/src/commands/: access.rs  auth.rs  config.rs  jellyfin.rs  mod.rs  users.rs
rust/apps/kanidm-admin/src/interactive/: controller.rs  forms.rs  home.rs  mod.rs
rust/apps/kanidm-admin/src/inventory/: clients.rs  groups.rs  users.rs
rust/apps/kanidm-admin/src/ops/: client.rs  context.rs  executor.rs  group.rs  local.rs  membership.rs  mod.rs  policy.rs  session.rs  user.rs
rust/apps/kanidm-admin/tests/: cli.rs
rust/apps/mail-archive-ui/: Cargo.toml  README.md  default.nix
rust/apps/mail-archive-ui/src/: main.rs
rust/apps/mail-archive-ui/static/: custom.css
scripts/: deploy.sh  (+46 more)
(+731 files in other folders)
