[package]
name = "disc-to-jellyfin"
version = "0.2.0"
edition = "2024"
description = "Interactive DVD ISO to Jellyfin MKV converter"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
