[package]
name = "mail-archive-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
chacha20poly1305 = "0.10.1"
form_urlencoded = "1.2.2"
rand = "0.8.5"
mailparse = "0.16.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.17", features = ["io"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.4"

[dev-dependencies]
tempfile = "3.23.0"
