[package]
name = "kanidm-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "macros"] }
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
